# robustify

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
robustify/: __init__.py  error.py  functional.py  result.py
