[tool.poetry]
name = "robustify"
version = "0.1.4"
description = "Utility tools to make the code Robust"
authors = ["Danyal Zia Khan <danyal6870@gmail.com>"]
license = "MIT License"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.1"
ipython = "^8.9.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.py$'

[tool.isort]
profile = "black"
line_length=88                 # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = ".venv, */build, */.git"
float_to_top = true

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]
venv = ".venv"
stubPath = "stubs"

reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownParameterType = "warning"
reportUnknownMemberType = false
reportUnknownVariableType = "warning"
reportUnknownArgumentType = true
reportPrivateUsage = true
reportUntypedFunctionDecorator = false
reportImportCycles = true
reportUnusedImport = "warning"
reportUnknownLambdaType = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"